[jvm] revert back to default GC settings in Linux startup script as well